--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation deps.dagger.runtime
     implementation deps.dagger.android
     implementation deps.dagger.android_support
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     kapt deps.dagger.android_support_compiler
     kapt deps.dagger.compiler
 
@@ -60,6 +61,7 @@ dependencies {
     implementation deps.jetpack.livedata
     implementation deps.jetpack.lifecycleruntime
     implementation deps.jetpack.reactivestream
+    kapt deps.jetpack.lifecycleCompiler
 
     implementation deps.support.annotations
     implementation deps.support.app_compat
@@ -72,7 +74,6 @@ dependencies {
     implementation deps.support.v4
 
     implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.4@aar'
-
 
 
     //test
