--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -1,2 +1,17 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest package = "com.ptitsn.presentation"
-			 xmlns:android = "http://schemas.android.com/apk/res/android"/>
+			 xmlns:android = "http://schemas.android.com/apk/res/android">
+
+	 <application>
+		  <activity
+				android:name = ".ui.screens.MainActivity"
+				android:screenOrientation = "portrait"
+		  >
+				<intent-filter>
+					 <action android:name = "android.intent.action.MAIN"/>
+					 <category android:name = "android.intent.category.LAUNCHER"/>
+				</intent-filter>
+		  </activity>
+	 </application>
+
+</manifest>
