--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -2,7 +2,11 @@
 <manifest package = "com.ptitsn.presentation"
 			 xmlns:android = "http://schemas.android.com/apk/res/android">
 
-	 <application>
+	 <uses-permission android:name = "android.permission.ACCESS_FINE_LOCATION"/>
+	 <application
+		  android:theme = "@style/AppTheme"
+		  android:usesCleartextTraffic = "true"
+	 >
 		  <activity
 				android:name = ".ui.screens.MainActivity"
 				android:screenOrientation = "portrait"
