--- a/versions.gradle
+++ b/versions.gradle
@@ -62,10 +62,6 @@ deps.dagger = dagger
 def jetpack = [:]
 def arch_version = "1.1.1"
 
-jetpack.roomRuntime = "android.arch.persistence.room:runtime:$arch_version"
-jetpack.roomRx = "android.arch.persistence.room:rxjava2:$arch_version"
-jetpack.roomTesting = "android.arch.persistence.room:testing:$arch_version"
-
 jetpack.lifecycle = "android.arch.lifecycle:extensions:$arch_version"
 jetpack.viewmodel = "android.arch.lifecycle:viewmodel:$arch_version"
 jetpack.livedata = "android.arch.lifecycle:livedata:$arch_version"
@@ -94,6 +90,10 @@ support.customtabs = "com.android.support:customtabs:$support_version"
 deps.support = support
 
 
+def other = [:]
+other.rxpermissions =  'com.tbruyelle.rxpermissions2:rxpermissions:0.9.4@aar'
+deps.other = other
+
 //test implementation
 
 def test = [:]
@@ -101,10 +101,12 @@ test.junit = "junit:junit:4.12"
 test.mockitoCore = "org.mockito:mockito-core:2.22.0"
 test.mockitoAndroid = "org.mockito:mockito-android:2.22.0"
 test.exspresso = "com.android.support.test.espresso:espresso-core:3.0.2"
+test.archCore = 'android.arch.core:core-testing:1.1.1'
+test.truth = 'com.google.truth:truth:0.42'
+
 
 def androidTest = [:]
 
-androidTest.archCore = 'android.arch.core:core-testing:1.1.1'
 androidTest.runner = 'com.android.support.test:runner:1.0.'
 androidTest.rules = 'com.android.support.test:rules:1.0.1'
 androidTest.support = "com.android.support:support-annotations:$support_version"
