--- a/data/src/main/AndroidManifest.xml
+++ b/data/src/main/AndroidManifest.xml
@@ -1,2 +1,3 @@
 <manifest package = "com.ptitsn.data"
-			 xmlns:android = "http://schemas.android.com/apk/res/android"/>
+			 xmlns:android = "http://schemas.android.com/apk/res/android">
+</manifest>
