--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
 <manifest package = "com.ptitsn.presentation"
 			 xmlns:android = "http://schemas.android.com/apk/res/android">
 
+	 <uses-permission android:name = "android.permission.INTERNET"/>
 	 <uses-permission android:name = "android.permission.ACCESS_FINE_LOCATION"/>
+	 <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
 	 <application
 		  android:theme = "@style/AppTheme"
 		  android:usesCleartextTraffic = "true"
