--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -7,8 +7,10 @@
 	 <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
 	 <application
+		  android:icon="@mipmap/ic_launcher"
 		  android:theme = "@style/AppTheme"
 		  android:usesCleartextTraffic = "true"
+		  android:hardwareAccelerated="true"
 	 >
 		  <activity
 				android:name = ".ui.screens.MainActivity"
