--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     addRepos(repositories)
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0-alpha03'
+        classpath 'com.android.tools.build:gradle:3.5.1'
         classpath 'com.google.gms:google-services:4.0.1'
         classpath deps.kotlin.plugin
         classpath deps.kotlin.allopen
@@ -13,6 +13,9 @@ buildscript {
         classpath 'org.ajoberstar:grgit:1.5.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+    }
+    repositories {
+        google()
     }
 }
 
